Bug 1765339 - Update error handling in PipeToPump r=evilpie,a=dsmith

Differential Revision: https://phabricator.services.mozilla.com/D144035